request for all posts

--- a/src/components/common/Footer/Footer.module.scss
+++ b/src/components/common/Footer/Footer.module.scss
@@ -1,8 +1,8 @@
 @import "../../../assets/style/vars";
 .wrapper-example {
-  height: 80px;
+  min-height: 80px;
   width: 100%;
-  background-color:$sub-color;
+  background-color: $sub-color;
   display: flex;
   justify-content: space-between;
   align-items: center;
