--- a/src/components/common/Header/Header.module.scss
+++ b/src/components/common/Header/Header.module.scss
@@ -1,7 +1,7 @@
 @import "../../../assets/style/vars";
 .wrapper-example {
   width: 100%;
-  height: 80px;
+  min-height: 80px;
   background-color: $sub-color;
   display: flex;
   justify-content: space-between;
